--- a/EDA PYTHON.ipynb
+++ b/EDA PYTHON.ipynb
@@ -15,19 +15,8 @@
    ],
    "source": [
     "'''\n",
-    "EDA é uma abreviação para Exploratory Data Analysis\n",
-    "Esta é uma tarefa que consiste em analisar bases de dados e extrair informação útil dos dados.\n",
-    "A análise parte desde a exploração descritiva dos dados como quantidade de registros e valores faltantes até uma exploração visual com o objetivo de representar melhor os dados em formatos mais intuitivos.\n",
-    "Para realizar o EDA se utilizam técnicas estatísticas como medir a dispersão dos dados, verificação de dependência entre atributos, detecção de anomalias, entre outras. Anomalias normalmente sao definidas como valores muito distantes da média, que podem ser ruído ocasionado devido a um erro na coleta ou transformação dos dados.\n",
-    "\n",
-    "Bases de Dados e Código\n",
-    "A base de dados que iremos utilizar podemos baixar no portal do Consumidor.gov.br neste link ou na página do programa dados abertos.\n",
-    "# Link para baixar o dataset: \n",
-    "https://consumidor.gov.br/pages/dadosabertos/externo/\n",
-    "A base de dados é composta por diversos atributos sobre cada reclamação.\n",
-    "Atributos como Região, UF e Cidade (onde a reclamação foi registrada), Sexo e Faixa Etária do consumidor, Data de Finalização da reclamação, o Tempo de Resposta em dias que corresponde ao tempo que a empresa demorou para responder o consumidor, o Nome Fantasia e o Segmento de Mercado que a empresa atua\n",
-    "Além disso tem de outras informações relacionadas ao problema, como: forma de aquisição do produto ou serviço e a nota atribuída pelo consumidor ao atendimento da empresa.\n",
-    "'''\n"
+    "Exploratory Data Analysis\n",
+  
    ]
   },
   {
