--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -686,7 +686,7 @@
     "# Uma hipótese se define como uma suposição ou uma possibilidade considerada válida.\n",
     "# Vamos avaliar as seguintes hipóteses:\n",
     "\n",
-    "# H1 – Existe alguma predominância de sexo nas reclamações? Ou melhor, qual quantidade de reclamações por sexo?\n",
+    "# H1 – Qual quantidade de reclamações por sexo?\n",
     "# H2 – Qual a faixa etária média dos consumidores?\n",
     "# H3 – Qual o grupo de problema mais comum e o segmento de mercado mais afetado?\n",
     "# H4 – Existe alguma correlação entre o tempo de resposta e a nota do consumidor?\n",
@@ -758,7 +758,7 @@
     }
    ],
    "source": [
-    "# H1 – Existe alguma predominância de sexo nas reclamações? Ou melhor, qual quantidade de reclamações por sexo?\n",
+    "# H1 – Qual quantidade de reclamações por sexo?\n",
     "qtd_por_sexo = dataset.groupby('Sexo')['Sexo'].count()\n",
     "print(qtd_por_sexo)"
    ]
@@ -851,7 +851,7 @@
     }
    ],
    "source": [
-    "# Para responder a hipótese H3 vamos concentrar nos atributos e Grupo Problema e Segmento de Mercado.\n",
+    "# Para responder a hipótese H3 vamos usar os atributos e Grupo Problema e Segmento de Mercado.\n",
     "dataset['Grupo Problema'].value_counts()"
    ]
   },
